--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
         <li><a href="recipes/individual-beef-wellington.html">Beef-Wellington Recipe</a></li>
+        <li><a href="recipes/cheesecake.html">Cheesecake Recipe</a></li>
     </ul>
 </body>
 </html>
